--- a/css/styles.css
+++ b/css/styles.css
@@ -7095,6 +7095,9 @@ textarea.form-control-lg {
   border-width: 5px !important;
 }
 
+.w-15{
+  width: 15% !important;
+}
 .w-25 {
   width: 25% !important;
 }
